# appstore-pricing

./: .gitignore  Cargo.toml
scripts/: build-release.sh  package-macos.sh  render-app-icon.swift
src/: main.rs
