[package]
name = "appstore_pricing"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false
split-debuginfo = "off"
strip = "symbols"

[dependencies]
anyhow        = "1.0"
eframe        = "0.34"
egui_extras   = "0.34"
futures       = "0.3.31"
html-escape   = "0.2"
regex         = "1.11"
reqwest       = { version = "0.11", features = ["json"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
tokio         = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
